force-app/main/default/objects/Soldier__c/Soldier__c.object-meta.xml
<CustomObject>
    <label>חייל</label>
    <nameField>
        <label>Soldier Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>חיילים</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>