force-app/main/default/objects/Soldier__c/fields/Personal_Number__c.field-meta.xml
<CustomField>
    <fullName>Personal_Number__c</fullName>
    <description>Solider personal number</description>
    <inlineHelpText>מספר אישי</inlineHelpText>
    <label>Personal Number</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>