force-app/main/default/objects/Soldier__c/fields/Position__c.field-meta.xml
<CustomField>
    <fullName>Position__c</fullName>
    <description>תפקיד בפלוגה</description>
    <inlineHelpText>תפקיד בפלוגה</inlineHelpText>
    <label>Position</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>מפעיל צמה  שלב 7</fullName>
            </value>
            <value>
                <fullName>מפעיל צמה שלב 7 + 8</fullName>
            </value>
            <value>
                <fullName>משק צמה</fullName>
            </value>
            <value>
                <fullName>מפקד מחלקה</fullName>
            </value>
            <value>
                <fullName>סגן מפקד פלוגה</fullName>
            </value>
            <value>
                <fullName>מפקד פלוגה</fullName>
            </value>
            <value>
                <fullName>נהג</fullName>
            </value>
            <value>
                <fullName>קשפל</fullName>
            </value>
            <value>
                <fullName>חופל</fullName>
            </value>
            <value>
                <fullName>רספ</fullName>
            </value>
            <value>
                <fullName>סרספ</fullName>
            </value>
            <value>
                <fullName>קצין</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>