force-app/main/default/objects/Soldier__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <inlineHelpText>סטטוס נוכחי חייל</inlineHelpText>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>שמ&quot;פ פעיל</fullName>
            </value>
            <value>
                <fullName>לא בשמ&quot;פ</fullName>
            </value>
            <value>
                <fullName>מסופח ליחידה אחרת</fullName>
            </value>
            <value>
                <fullName>לחימה</fullName>
            </value>
            <value>
                <fullName>בית</fullName>
            </value>
            <value>
                <fullName>בדרך</fullName>
            </value>
            <value>
                <fullName>יום התארגנות</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>